@@ -34,6 +34,8 @@ ikiwiki (3.20150615) UNRELEASED; urgency=medium
   * d/control: remove leading article from Description
     (lintian: description-synopsis-starts-with-article)
   * d/control: Standards-Version: 3.9.6, no changes required
+  * Silence "used only once: possible typo" warnings for variables
+    that are part of modules' APIs
 
  -- Simon McVittie <smcv@debian.org>  Mon, 15 Jun 2015 18:13:23 +0100
 
